--- a/app/globals.css
+++ b/app/globals.css
@@ -90,6 +90,7 @@
   } */
   
 .sidebar {
+  
  
 }
 
@@ -211,3 +212,8 @@
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   }
 }
+/* Hide the sidebar scroll */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
